--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: newpack
-Title: What the Package Does (One Line, Title Case)
+Title: For Better strsplit
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Helka", "Kaunisto", , "helka@outlook.com", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0002-4038-0816"))
+Description: Makes it easier to use strsplit.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
