--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-URL: https://github.com/hookoop/newpack
+URL: https://github.com/hookoop/newpack, https://hookoop.github.io/newpack/
 BugReports: https://github.com/hookoop/newpack/issues
 Suggests: 
     testthat (>= 3.0.0)
